--- a/DARemoteViewer.WPF/MainWindow.xaml
+++ b/DARemoteViewer.WPF/MainWindow.xaml
@@ -39,14 +39,14 @@
                     <ColumnDefinition Width="25"/>
                 </Grid.ColumnDefinitions>
                 <Label Grid.Row="0" Grid.Column="0" Content="{Binding ActiveConfig.Name}" Margin="0,0,64,0"/>
-                <Button  Command="{Binding CreateConfigCommand}"  Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <Button  Command="{Binding AddConnectionCommand}"  Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
                     <Image Source="Image\plusicon_25p.png" HorizontalAlignment="Right"/>
                 </Button>
-                <Button Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <Button Command="{Binding RemoveConnectionCommand}" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
                     <Image Source="Image\minusicon_25p.png" HorizontalAlignment="Right"/>
                 </Button> 
             </Grid>
-            <ListBox Grid.Row="1" Grid.Column="0" Height="auto" ItemsSource="{Binding ActiveConfig.connections}" >
+            <ListBox Grid.Row="1" Grid.Column="0" Height="auto" ItemsSource="{Binding ActiveConfig.connections}" SelectedItem="{Binding SelectedConnection}" >
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <controls:ConnectionBar Width="auto" HorizontalAlignment="Right"/>
@@ -54,5 +54,6 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
+        <TextBlock Text="{Binding SelectedConnection.Name}" Margin="310,53,274,333" Grid.Row="1"></TextBlock>
     </Grid>
 </Window>
