--- a/DARemoteViewer.WPF/Controls/MainServiceBar.xaml
+++ b/DARemoteViewer.WPF/Controls/MainServiceBar.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DARemoteViewer.WPF.Controls.ServiceBar"
+﻿<UserControl x:Class="DARemoteViewer.WPF.Controls.MainServiceBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,17 +10,12 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition Width="25"/>
+            <ColumnDefinition Width="25"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <TextBlock Text="{Binding Name}" HorizontalAlignment="Left" />
-        </Grid>
-        <Grid Grid.Column="1" HorizontalAlignment="Right">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <!--<TextBlock Grid.Column="0" Text="{Binding Id}" />-->
-            <CheckBox Grid.Column="1" IsChecked="{Binding IsSelected}"/>
-        </Grid>
+        <Label  Grid.Column="0" Content="{Binding Name}" HorizontalAlignment="Left"/>
+        <Label Grid.Column="1" Content="Status" HorizontalAlignment="Right" />
+        <Button Grid.Column="2" Content="Start" HorizontalAlignment="Right"/>
+        <Button Grid.Column="3" Content="Stop" HorizontalAlignment="Right"/>
     </Grid>
 </UserControl>
